@@ -6,10 +6,10 @@ import org.junit.jupiter.api.*;
 
 import static server.HttpTaskServer.*;
 import java.io.IOException;
-import java.net.URI;
 import java.net.http.*;
-import java.time.*;
 import java.util.List;
+import java.net.URI;
+import java.time.*;
 
 import tasks.*;
 
@@ -40,7 +40,6 @@ class EpicsHandlerTest {
         Epic epic = taskManager.createEpic("Epic");
         String taskJson = gson.toJson(epic);
         taskManager.clear();
-
         HttpClient client = HttpClient.newHttpClient();
         URI url = URI.create("http://localhost:8080/epics");
         HttpRequest request = HttpRequest
@@ -49,7 +48,6 @@ class EpicsHandlerTest {
                 .POST(HttpRequest.BodyPublishers.ofString(taskJson))
                 .build();
         HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
-
         assertEquals(201, response.statusCode());
         assertNotNull(taskManager.getMapOfTasks(), "Задачи не возвращаются");
         assertEquals(1, taskManager.getMapOfTasks().size(), "Некорректное количество задач");
@@ -59,9 +57,8 @@ class EpicsHandlerTest {
     @Test
     void epicsShows() throws IOException, InterruptedException {
         Epic epic = taskManager.createEpic("Epic");
-        Subtask subtask = taskManager.createSubtask(epic, "test", LocalDateTime.now(), Duration.ofMinutes(2));
+        taskManager.createSubtask(epic, "test", LocalDateTime.now(), Duration.ofMinutes(2));
         String epicInJson = "[" + gson.toJson(epic) + "]";
-
         HttpClient client = HttpClient.newHttpClient();
         URI url = URI.create("http://localhost:8080/epics");
         HttpRequest request = HttpRequest
@@ -71,20 +68,18 @@ class EpicsHandlerTest {
                 .build();
         HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
         List<Epic> tasksFromManager = taskManager.getEpicList();
-
         assertEquals(200, response.statusCode());
         assertEquals(epicInJson, response.body());
         assertNotNull(tasksFromManager, "Задачи не возвращаются");
         assertEquals(1, tasksFromManager.size(), "Некорректное количество задач");
-        assertEquals("Epic", tasksFromManager.get(0).getName(), "Некорректное имя задачи");
+        assertEquals("Epic", tasksFromManager.getFirst().getName(), "Некорректное имя задачи");
     }
 
     @Test
     void epicsShowsHisSubs() throws IOException, InterruptedException {
         Epic epic = taskManager.createEpic("Epic");
         taskManager.createSubtask(epic, "sub1",
-                LocalDateTime.of(2024, 1, 1, 10, 00), Duration.ofMinutes(2));
-
+                LocalDateTime.of(2024, 1, 1, 10, 0), Duration.ofMinutes(2));
         HttpClient client = HttpClient.newHttpClient();
         URI url = URI.create("http://localhost:8080/epics/0/subtasks");
         HttpRequest request = HttpRequest
@@ -94,7 +89,6 @@ class EpicsHandlerTest {
                 .build();
         HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
         List<Epic> tasksFromManager = taskManager.getEpicList();
-
         assertEquals(200, response.statusCode());
         assertNotNull(tasksFromManager, "Задачи не возвращаются");
         assertEquals(1, tasksFromManager.size(), "Некорректное количество задач");
@@ -107,7 +101,6 @@ class EpicsHandlerTest {
                 LocalDateTime.now().plus(Duration.ofHours(1)), Duration.ofMinutes(5));
         String epicInJson = gson.toJson(epic);
         String id = String.valueOf(epic.getId());
-
         HttpClient client = HttpClient.newHttpClient();
         URI url = URI.create("http://localhost:8080/epics/" + id);
         HttpRequest request = HttpRequest
@@ -116,7 +109,6 @@ class EpicsHandlerTest {
                 .GET()
                 .build();
         HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
-
         assertEquals(200, response.statusCode());
         assertEquals(epicInJson, response.body());
     }
@@ -126,9 +118,8 @@ class EpicsHandlerTest {
         Epic epic = taskManager.createEpic("Epic");
         taskManager.createSubtask(epic, "sub", "Testing sub",
                 LocalDateTime.now().plus(Duration.ofHours(1)), Duration.ofMinutes(5));
-        String epicInJson = gson.toJson(epic);
+        gson.toJson(epic);
         String id = String.valueOf(epic.getId() + 3);
-
         HttpClient client = HttpClient.newHttpClient();
         URI url = URI.create("http://localhost:8080/tasks/" + id);
         HttpRequest request = HttpRequest
@@ -137,7 +128,6 @@ class EpicsHandlerTest {
                 .GET()
                 .build();
         HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
-
         assertEquals(404, response.statusCode());
         assertEquals("404: не найдено", response.body());
     }
@@ -147,7 +137,6 @@ class EpicsHandlerTest {
         Epic epic = taskManager.createEpic("Epic");
         taskManager.createSubtask(epic, "sub", "Testing sub",
                 LocalDateTime.now().plus(Duration.ofHours(1)), Duration.ofMinutes(5));
-
         String id = String.valueOf(epic.getId());
         HttpClient client = HttpClient.newHttpClient();
         URI url = URI.create("http://localhost:8080/epics/" + id);
@@ -157,7 +146,6 @@ class EpicsHandlerTest {
                 .DELETE()
                 .build();
         HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
-
         assertEquals(200, response.statusCode());
         assertEquals(0, taskManager.getMapOfTasks().size());
     }
